add abb to html ad css

--- a/css/style.css
+++ b/css/style.css
@@ -238,3 +238,8 @@ ol.steps{
         
     }
    
+    abbr{
+        font-size: inherit;
+        font-family: inherit;
+        font-weight: inherit;
+    }
