--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img{
     display: flow-root;
     background-color: rgb(189, 187, 181);
     width:auto;
-    max-width: 30em;
+    max-width: 80%;
     padding:0 1em;
     margin: 0 auto;
 
