--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html, body
 }
 body{
     margin:0;
+    background-color: rgb(51, 170, 250);
 }
 * {
     box-sizing: border-box;
@@ -52,12 +53,18 @@ img{
 
 }
 
-.mar-section {
+.padd-section {
+padding:0 1em;
+display: flow-root;
+}
+
+.mar-list {
 margin: 1em 0;
 }
 
 .mar-bger-section {
-    margin: 3em 0;
+    margin: 1em 0;
+    display: flow-root;
     }
     
 
@@ -68,6 +75,7 @@ margin: 1em 0;
 
 .bg-main-secion{
     background: #ffffff; 
+    
     
 }
 
@@ -174,13 +182,12 @@ ol.steps{
     font-size: 0.9em;
     line-height: 1.5em;
     margin: 1.5em 0;
-    padding-left: 1em;     
-}
-.art-left-border{
+    padding: 0 1em;  
     border-left-style: solid;
     border-width: 0.3em;
-    border-left-color:  #ffbc48; 
+    border-left-color:  #ffbc48;    
 }
+
 
 .cption {
     font-family: 'Merriweather', serif;
