--- a/css/style.css
+++ b/css/style.css
@@ -317,18 +317,17 @@ ol.steps{
    /* margin*/
     .mainparent {
  
-        display: flex;
-     
+        display: flex; 
         justify-content: space-between;
         align-items: center;
-        background-color:lightgreen;
+        
         /* padding:0.5em 0; */
        
        
       }
       .mainchild {
         flex: 1 1 auto;
-        border: 0.2em solid red;
+        /* border: 0.2em solid red; */
       }
       
       .parent-left-col {
@@ -339,17 +338,16 @@ ol.steps{
         border: 0.2em solid pink;
       }
       .left-child-lvl2{
-       background-color: blue;
+       
        padding: 0.3em;
        margin: 0.2em 0;
-       color: white;
        color: white;
        flex: 0 1 auto;
        
       }
       
       .parent-term-priv{
-       display: flex;
+        display: flex;
         flex-direction: row;
         justify-content: flex-start;
         flex-wrap:wrap;
@@ -358,7 +356,7 @@ ol.steps{
       
       
       .parent-term-priv li {
-       background-color: orange;
+     
        padding-right: 0.5em;
        margin: 0.2em;
        color: white;
@@ -371,16 +369,42 @@ ol.steps{
         flex-direction: row;
         justify-content: flex-end;
         flex-wrap:wrap;
-     
         border: 0.2em solid pink;
-        color: white;
+        padding: 0.5em 0;
+        
       
       }
       .parent-right-row li {
-       background-color: blue;
-       padding: 0.2em;
-       margin: 0.2em;
-       color: white;
+       padding: 0em;
+       margin-left: 0.5em;
        flex: 0 1 auto;
+       font-size: 1.5em;
       }
       
+      .fa {
+        border-radius: 1em;
+        text-align: center;
+        padding: 0.5em 0;       
+         width: 2em;
+      }
+      
+      .fa:hover {
+        opacity: 0.7;
+      }
+      
+      
+      .fa-facebook {
+        background-color: #ffbc48;
+        color: black; 
+      }
+      
+      
+      .fa-twitter {
+        background-color: #ffbc48;
+        color: black; 
+      }
+      
+      .fa-instagram {
+        background-color: #ffbc48;
+        color: black; 
+      }
