--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,48 @@
-/* FONTS*::::::::::::::::::::::::::::::::::::::::/
-/* font-family: 'Fira Sans', sans-serif; */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
-/* font-family: 'Merriweather', serif; */
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
+/* FONTS*::::::::::::::::::::::::::::::::::::::::*/
+
+/* font-family: 'Dancing Script', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+
+/* font-family: 'Cantarell', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Cantarell&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cantarell:wght@400;700&display=swap');
+
+/* font-family: 'Crimson Text', serif; */
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@700&display=swap');
 
 /* RESETS ::::::::::::::::::::::::::::::::::::::::*/
 
 html, body
 {
     height: 100%;
+
+}
+html{
+      /* fonsts */
+      --f-mhdng:Dancing Script;
+      --f-hdng:Cantarell;
+      --f-shdng:'Crimson Text';
+      --f-common:sans-serif;
+      /* colors */
+      --bg-theme-sec:#2CC1C0;
+      --bg-theme-sec2:#34B2AF;
+      --bg-main: rgb(255, 255, 255);
+     
+      --bg-theme: #fe749c;
+  
+      --f-clear: white;
+      --f-dark: black;
+  
+      --f-grey: #D8D8D8;
+      --shdw: grey;
+      --bg-sw1: white;
+      --bg-sw2: black;
+  
+  
+      --bder-rd: 2em;
+      
 }
 body{
     margin:0;
@@ -56,6 +88,7 @@ img{
 .padd-section {
 padding:0 1em;
 display: flow-root;
+
 }
 
 .mar-list {
@@ -68,58 +101,48 @@ margin: 1em 0;
     }
     
 
-.bg-header-secion{
-    background: #000000; 
-    
-}
+.bg-theme-section{background-color: var(--bg-theme-sec);}
+.bg-nav-section{background-color: var(--bg-theme);}
+.bg-main-section{background-color: var( --bg-main);}
 
-.bg-main-secion{
-    background: #ffffff; 
-    
-    
-}
-
-.bg-footer-secion{
-    background: #a5a2a7; 
-    
-}
 .white-strong {
     font-weight:900; 
-    color:rgb(255, 255, 255);
+    color: var(--f-clear);
    
 }
 
+
 .f-yellow{
     font-weight: bolder; 
-    color:  #ffbc48; 
+    color: var(--bg-theme);
     text-decoration-line:underline ;
 }
 
 
 .a-f-baking {
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: .9em;
     color: black;
     font-weight: bolder; 
     padding: 0.3em;
-    background: #ffbc48; 
+    background-color: var(--bg-theme); 
    
 }
 
 .main-heading{
-    font-family: 'Fira Sans', sans-serif; 
+    font-family: var(--f-mhdng), var(--f-common); 
     font-weight: bolder;
     font-size: 3em;
-    color: ghostwhite;
+    color: var(--f-clear);
     margin: 1rem 0;
 }
 
 .main-pgraph {
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: 1.1em;
     letter-spacing: .03em;
     margin: 1em 0;
-    color: rgb(242, 242, 253);
+    color: var(--f-clear);
  
 }
 
@@ -135,7 +158,8 @@ margin: 1em 0;
     display: flex;
     flex-direction: row;
     flex: 0 1 auto;
-    font-family: 'Fira Sans', sans-serif; 
+    font-family: var(--f-hdng), var(--f-common); 
+    letter-spacing: -0.1em;
     text-transform: uppercase;
     font-weight:bolder; 
     padding: 0.3em 0.3em 0.3em 0;
@@ -143,7 +167,7 @@ margin: 1em 0;
   
   
   .li-sub-parent span:first-child {
-    color: rgb(255, 255, 255);
+    color: var(--f-clear);
     padding: 0.3em 0.3em 0.3em 0;
     flex: 0 1 auto;
     font-family: inherit;
@@ -153,7 +177,7 @@ margin: 1em 0;
   .li-sub-parent span:last-child {
     color: black;
     padding: 0.3em;
-    background-color: #ffbc48;
+    background-color: var(--bg-theme);
     text-align: center;
     flex: 0 1 auto;
 
@@ -165,7 +189,7 @@ margin: 1em 0;
   .li-sub-parent time:last-child {
     color: black;
     padding: 0.3em;
-    background-color: #ffbc48;
+    background-color: var(--bg-theme);
     text-align: center;
     flex: 0 1 auto;
 
@@ -193,16 +217,18 @@ margin: 1em 0;
 }
 
 .ul-menu-parent li > a {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: var(--f-hdng), var(--f-common); 
     font-weight: bolder;
     font-size: 1.1em;
-    color:  #ffbc48; 
+    color: var(--f-dark); 
+    text-shadow: 
+		-0.05em 0.05em 0rem rgba(232, 232, 232, 0.5); 
   }
 
 
 
 ul.deco{
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: 1em;
     line-height: 1.7em;
     list-style-type:disc;
@@ -217,7 +243,7 @@ ol.steps{
 
 .f-all-topics
 {
-    font-family: 'Fira Sans', sans-serif; 
+    font-family: var(--f-hdng), var(--f-common); 
     font-weight: bolder;
     margin: 1em 0;  
     color: black;  
@@ -231,14 +257,14 @@ ol.steps{
 }
 
 .all-p{
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: 0.9em;
     margin: 1em 0;
     letter-spacing: .04em;
    
 }
 .bq-pem{
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-style: italic;
     font-size: 0.9em;
     line-height: 1.5em;
@@ -246,15 +272,89 @@ ol.steps{
     padding: 0 1em;  
     border-left-style: solid;
     border-width: 0.3em;
-    border-left-color:  #ffbc48;    
+    border-left-color: var(--bg-theme);    
 }
 
 
 .cption {
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: 0.85em;
     color: rgb(68, 68, 68);
 }
+
+
+
+.layout {
+	display: flow-root;
+	padding: 1em;
+	color: var(--bg2);
+}
+
+
+.chbox:checked + .layout {
+  --f-clear: #fe749c;
+  --bg-theme:white;
+  --f-dark: #D8D8D8;
+  --f-grey: black;
+  --bg-sw1: black;
+  --bg-sw2: white;
+ 
+}
+.chbox {
+	display: none;
+ 
+}
+.toggle {
+  padding: 0.25em 0.1em;
+  max-width: 8em;
+	border-radius: var(--bder-rd);
+  box-shadow:  0 0 10px var(--shdw);
+  display:grid;
+  grid-template-columns: repeat (2, minmax(10em, 1fr));
+  justify-content: space-around;
+}
+
+.switch {
+	border:0.2em solid black;
+  border-radius: var(--bder-rd);
+	transition: transform 200ms;
+  box-shadow: 0 0 0.2em var(--bg-theme-sec);
+  
+}
+
+.chbox:checked + .layout .switch {
+	transform: translateX(4em);
+  transition: transform 200ms;
+}
+
+.sw-left, .sw-right {
+  font-size: 1em;
+  text-align:center;
+  pointer-events: none;
+  padding: 0.3em 0.6em;
+  border-radius: var(--bder-rd);
+  grid-row-start: 1;
+}
+
+.sw-left{
+  background-color: var(--bg-theme);
+  color: var(--f-dark);
+  grid-column-start: 1;
+  box-shadow: 0 0 0.15em var(--bg-sw2);
+}
+
+.sw-right{
+  background-color: var(--f-clear);
+  color: var(--f-grey);
+  grid-column-start: 2;
+  box-shadow: 0 0 0.15em var(--bg-sw1);
+}
+
+.sw-over{
+  grid-row-start: 1;
+  grid-column-start: 1;
+}
+
 
 .tbl-schedule { 
     border-collapse: collapse;
@@ -282,16 +382,16 @@ ol.steps{
     color: black; 
 }
 .tbl-schedule thead th{
-    font-family: 'Fira Sans', sans-serif; 
+    font-family: var(--f-hdng), var(--f-common); 
     font-weight: bolder;    
     font-size: .9em;
     text-transform: uppercase; 
-    background-color: #ffbc48;
+    background-color: var( --bg-theme);
    
 }
 
 .tbl-schedule tbody td{
-    font-family: 'Merriweather', serif;
+    font-family: var(--f-shdng), var(--f-common); 
     font-size: .8em;
 }
 
@@ -335,14 +435,15 @@ ol.steps{
         flex-direction: column;
         justify-content: center;
         flex-wrap:wrap;
-        border: 0.2em solid pink;
+       
       }
       .left-child-lvl2{
        
        padding: 0.3em;
        margin: 0.2em 0;
-       color: white;
+       color: var(--f-clear);
        flex: 0 1 auto;
+       font-family: var(--f-shdng), var(--f-common);
        
       }
       
@@ -351,7 +452,7 @@ ol.steps{
         flex-direction: row;
         justify-content: flex-start;
         flex-wrap:wrap;
-        border: 0.1em solid pink;
+       
       }
       
       
@@ -359,8 +460,13 @@ ol.steps{
      
        padding-right: 0.5em;
        margin: 0.2em;
-       color: white;
+       color: inherit;
        flex: 0 1 auto;
+       font-family: inherit;
+        }
+        .parent-term-priv li a {
+          color: inherit;
+          font-family: inherit;
         }
       
       
@@ -369,7 +475,6 @@ ol.steps{
         flex-direction: row;
         justify-content: flex-end;
         flex-wrap:wrap;
-        border: 0.2em solid pink;
         padding: 0.5em 0;
         
       
@@ -394,17 +499,17 @@ ol.steps{
       
       
       .fa-facebook {
-        background-color: #ffbc48;
+        background-color:var( --bg-theme);
         color: black; 
       }
       
       
       .fa-twitter {
-        background-color: #ffbc48;
+        background-color: var( --bg-theme);
         color: black; 
       }
       
       .fa-instagram {
-        background-color: #ffbc48;
+        background-color: var( --bg-theme);
         color: black; 
       }
