--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,13 @@ padding:0 1em;
 display: flow-root;
 
 }
+.padd-hder-section {
+  padding: 3em 1em 1em 1em;
+  display: flow-root;
+  border-radius: 5em 5em 0 0;
+  text-align: center;
+  
+  }
 
 .mar-list {
 margin: 1em 0;
@@ -143,6 +150,8 @@ margin: 1em 0;
     letter-spacing: .03em;
     margin: 1em 0;
     color: var(--f-clear);
+    padding: 1em 10%;
+    text-align: inherit;
  
 }
 
