--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html{
       --flx-dir-parent:column;
       --flx-dir-child: row;
 
-      
+      --algn-menu:left;
 }
 body{
     margin:0;
@@ -185,6 +185,7 @@ margin: 1em 0;
     flex-direction: var(--flx-dir-child);
     flex: 0 1 25%;
     font-family: var(--f-hdng), var(--f-common); 
+    font-size: 0.9em;
     letter-spacing: -0.1em;
     text-transform: uppercase;
     font-weight:bolder; 
@@ -234,13 +235,15 @@ margin: 1em 0;
     display: flex;
     flex-direction: var(--flx-dir-parent);
     flex-wrap:wrap;
-    justify-content: space-between;
-   
+    justify-content:space-evenly;
+    align-content: var(--algn-menu);
 }
 
 .ul-menu-parent li{
- flex: 1 1 auto;
-  padding: 0.5em 0;
+    flex: 1 0 16.66%;
+    text-align: var(--algn-menu);
+    padding: 0.5em 0;
+    border: 0.1em solid white;
 }
 
 .ul-menu-parent li > a {
@@ -549,6 +552,7 @@ ol.steps{
       
       --padd-item-status: 0;
       --flx-dir-parent:row;
-      --flx-dir-child: column;
+      --flx-dir-child:column;
+      --algn-menu:center;
       }
     }
