add resposive footer, add margin menu

--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,8 @@ margin: 1em 0;
     flex: 1 0 16.66%;
     text-align: var(--algn-menu);
     padding: 0.5em 0;
-    border: 0.1em solid white;
+    margin:0.1em;
+    background-color: var(--bg-theme);
 }
 
 .ul-menu-parent li > a {
@@ -251,9 +252,7 @@ margin: 1em 0;
     font-weight: bolder;
     font-size: 1.1em;
     color: var(--f-dark); 
-    text-shadow: 
-		-0.05em 0.05em 0rem rgba(232, 232, 232, 0.5); 
-  }
+    }
 
 
 
@@ -444,22 +443,16 @@ ol.steps{
         font-weight: inherit;
     }
     
-    /* footer flex*/
-
-   /* margin*/
+  
     .mainparent {
- 
         display: flex; 
         justify-content: space-between;
         align-items: center;
-        
-        /* padding:0.5em 0; */
-       
+        flex-direction: var( --flx-dir-parent); 
        
       }
       .mainchild {
         flex: 1 1 50%;
-        /* border: 0.2em solid red; */
       }
       
       .parent-left-col {
@@ -481,9 +474,9 @@ ol.steps{
       
       .parent-term-priv{
         display: flex;
-        flex-direction: row;
         justify-content: flex-start;
         flex-wrap:wrap;
+      
        
       }
       
@@ -491,7 +484,6 @@ ol.steps{
       .parent-term-priv li {
      
        padding-right: 0.5em;
-       margin: 0.2em;
        color: inherit;
        flex: 0 1 auto;
        font-family: inherit;
@@ -499,6 +491,7 @@ ol.steps{
         .parent-term-priv li a {
           color: inherit;
           font-family: inherit;
+          text-align: left;
         }
       
       
@@ -508,44 +501,36 @@ ol.steps{
         justify-content: flex-end;
         flex-wrap:wrap;
         padding: 0.5em 0;
+       
         
       
       }
       .parent-right-row li {
-       padding: 0em;
-       margin-left: 0.5em;
-       flex: 0 1 auto;
-       font-size: 1.5em;
+        padding: 0em;
+        margin: 0;
+        flex: 0 1 auto;
+        font-size: 2.5em;
+        
       }
       
       .fa {
         border-radius: 1em;
-        text-align: center;
-        padding: 0.5em 0;       
-         width: 2em;
+        text-align: center;      
+        padding:  0;       
+        width: 1.5em;
+        height: auto;
+       
       }
       
       .fa:hover {
         opacity: 0.7;
       }
-      
-      
-      .fa-facebook {
-        background-color:var( --bg-theme);
-        color: black; 
+        
+      .fa-facebook, .fa-twitter, .fa-instagram {
+        color:var( --bg-theme);   
       }
       
-      
-      .fa-twitter {
-        background-color: var( --bg-theme);
-        color: black; 
-      }
-      
-      .fa-instagram {
-        background-color: var( --bg-theme);
-        color: black; 
-      }
-
+     
 
       @media screen and (min-width: 40em) {
         html {
