Eddit main pgrph 0, reduce translationX .swithc

--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ margin: 1em 0;
     letter-spacing: .03em;
     margin: 1em 0;
     color: var(--f-clear);
-    padding: 1em var(--padd-graph);
+    padding: 0 var(--padd-graph);
     text-align: inherit;
  
 }
@@ -364,7 +364,7 @@ ol.steps{
 }
 
 .chbox:checked + .toggle-layout .switch {
-	transform: translateX(4em);
+	transform: translateX(3.8em);
   transition: transform 200ms;
  }
 
