--- a/css/style.css
+++ b/css/style.css
@@ -244,11 +244,12 @@ margin: 1em 0;
 }
 
 .ul-menu-parent li{
-    flex: 1 0 16.66%;
+    flex: 1 1 auto;
     text-align: var(--algn-menu);
     padding: 0.5em 0;
     margin:0.1em;
     background-color: var(--bg-theme);
+  
 }
 
 .ul-menu-parent li > a {
@@ -558,4 +559,5 @@ ol.steps{
         padding:0 1em;
         margin: 0 auto;
     }
+  }
     }
