Edit footerbk-ground, menu margin, hovers and shadows

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ html{
 }
 body{
     margin:0;
-    background-color: rgb(51, 170, 250);
+   
 }
 * {
     box-sizing: border-box;
@@ -108,6 +108,8 @@ img{
   display: flow-root;
   }
   
+ 
+    
 
 .padd-hder-section {
 padding:0 0 1em 0;
@@ -133,7 +135,7 @@ margin: 1em 0;
 }
 
 .mar-bger-section {
-    margin: 0.5em 0;
+    margin: 1em 0;
     display: flow-root;
     }
     
@@ -148,6 +150,7 @@ margin: 1em 0;
   background-position:center;
   background-size: cover;
   background-blend-mode: normal, screen;
+  box-shadow: 0 0.4em 0.8em rgba(255, 255, 255,0.3);
 }
 
 .white-strong {
@@ -270,7 +273,9 @@ margin: 1em 0;
     background-color: var(--bg-theme);
   
 }
-
+.ul-menu-parent li:hover{
+opacity: 0.7;
+}
 .ul-menu-parent li > a {
     font-family: var(--f-hdng), var(--f-common); 
     font-weight: bolder;
@@ -385,8 +390,11 @@ ol.steps{
   box-shadow: 0 0 0.2em var(--bg-theme);
   grid-row-start: 1;
   grid-column-start: 1;
+  cursor: pointer;
   
 }
+
+
 
 .chbox:checked + .toggle-layout .switch {
 	transform: translateX(4.8em);
@@ -558,12 +566,12 @@ ol.steps{
       }
         
       .fa-facebook, .fa-twitter, .fa-instagram {
-        color:var( --bg-theme);   
+        color:var(--bg-theme-sec);   
       }
       
      
 
-      @media screen and (min-width: 40em) {
+      @media screen and (min-width: 50em) {
         html {
       
       /* --padd-item-status: 0; */
@@ -576,9 +584,10 @@ ol.steps{
       --f-side-topic: black;
       }
       .container {
-        max-width: 100%;
-        padding:0 1em;
+        max-width: 80%;
+        /* padding:0 1em; */
         margin: 0 auto;
+        box-shadow: 0 0.3em 0.7em grey;
        }
 
        .padd-main-layout{
@@ -601,32 +610,23 @@ ol.steps{
           flex-grow: 1;
         }
 
-        .ul-menu-parent li{
+      
+
+        /* .ul-menu-parent li{
           background-color: var(--bg-theme-sec2);
       }
       .ul-menu-parent li > a {
         color: var(--bg-theme); 
-        }
+        } */
 
 
   }
     
-  @media screen and (min-width: 50em) {
+ 
+  @media screen and (min-width: 55em) {
   
 
     .container {
-      max-width: 80%;
-      /* padding:0 1em;
-      margin: 0 auto; */
-     }
-  }
-
-  @media screen and (min-width: 80em) {
-  
-
-    .container {
-      max-width: 70%;
-      /* padding:0 1em;
-      margin: 0 auto; */
+      max-width: 60%;
      }
   }
