--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ img{
     width: auto;
 	max-width: 100%;
   border-radius: 3%;
+  box-shadow: -0.2em 0.2em 0.2em grey;
 
 }
 
@@ -440,6 +441,7 @@ ol.steps{
 .tbl-schedule { 
     border-collapse: collapse;
     width: 100%;
+    box-shadow: -0.1em 0.1em 0.5em grey;
    }
 .tbl-schedule thead, .tbl-schedule tbody {
     border:0.1em solid  grey;
