--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ margin: 1em 0;
     padding: 0.2em 1.5em;
     background-color: var(--bg-theme); 
     border-radius: 90% 90% 10% 10%;
+    user-select: none;
    
 }
 
@@ -387,14 +388,15 @@ ol.steps{
  
 }
 .toggle {
-  padding: 0.25em 0.1em;
-  min-width: 10em;
-  width:fit-content;
+  padding: 0.25em 0.3em;
+  /* min-width: 10em; */
+  width:auto;
+  max-width:max-content;
   background-color: white;
 	border-radius: var(--bder-rd);
   box-shadow:  0 0 10px var(--shdw);
   display:grid;
-  grid-template-columns: repeat (auto-fit, minmax(10em, 1fr));
+  grid-template-columns: 1fr, 1fr;
   justify-content: space-around;
 }
 
@@ -402,21 +404,25 @@ ol.steps{
 	border:0.2em solid black;
   border-radius: var(--bder-rd);
 	transition: transform 200ms;
-  box-shadow: 0 0 0.2em var(--bg-theme);
+  box-shadow: 0 0 0.3em #fe749c;
   grid-row-start: 1;
   grid-column-start: 1;
   cursor: pointer;
   
 }
 .chbox:checked + .toggle-layout .switch {
-	transform: translateX(4.8em);
+	transform: translateX(3.5em);
   transition: transform 200ms;
+  box-shadow: 0 0 0.3em #fe749c;
+  /* grid-row-start: 1;
+  grid-column-start: 2; */
  }
 
 .sw-left, .sw-right {
   font-size: 1em;
   text-align:center;
   pointer-events: none;
+  user-select: none;
   padding: 0.3em 0.6em;
   border-radius: var(--bder-rd);
   grid-row-start: 1;
@@ -575,7 +581,8 @@ ol.steps{
       }
       
       .fa:hover {
-        opacity: 0.7;
+        /* opacity: 0.7; */
+        color:var(--bg-theme-sec2); 
       }
         
       .fa-facebook, .fa-twitter, .fa-instagram {
