--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ ol.steps{
   padding: 0 1em;     
 }
 
-.cption {
+.cption, .t-table:last-child {
   color: rgb(68, 68, 68);
   font-family: var(--f-shdng), var(--f-common); 
   font-size: 0.85em;   
