--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ img{
   padding:0;
   display: grid;
 }
+
   
 .mar-list, .mar-bger-section {
   margin: 1em 0;
@@ -154,7 +155,7 @@ rgba(0, 0, 0, 0.1),rgb(0, 0, 0)), url("../img/h-ready-to-eat-1920w.jpg");
   padding: var(--cmon-padd) 1.5em;
   /* background-color: var(--bg-theme);  */
   background-image:radial-gradient(rgba(255, 255, 255, 0.418), 
-  rgba(255, 255, 255, 0)), linear-gradient(var(--bg-theme), #b9506e);
+  rgba(255, 255, 255, 0)), linear-gradient(var(--bg-theme), #a34661);
   border-radius: 90% 90% 10% 10%;
   user-select: none;
    
@@ -181,14 +182,15 @@ rgba(0, 0, 0, 0.1),rgb(0, 0, 0)), url("../img/h-ready-to-eat-1920w.jpg");
 .ul-status-m-parent{
   display: flex;
   flex-direction: var(--flx-dir-parent);
-  justify-content: space-between;
+  justify-content: center;
   padding-left: 0; 
+  gap: 0;
 }
   
 .li-status-sub-parent {
   display: flex;
   flex-direction: var(--flx-dir-child);
-  flex: 0 1 25%;
+  flex: 0 1 20%;
   font-family: var(--f-hdng), var(--f-common); 
   font-size: 0.9em;  
   font-weight:bolder; 
@@ -395,6 +397,7 @@ ol.steps{
   border-collapse: collapse; 
   box-shadow: -0.1em 0.1em 0.5em grey;
   width: 100%;
+  margin-bottom: 0.3em;
 }
 
 .tbl-schedule thead, .tbl-schedule tbody {
@@ -499,6 +502,24 @@ ol.steps{
   flex: 0 1 auto;
   font-size: 2.5em;
 }
+.go-top {
+display: flex;
+justify-content: flex-end;
+}
+
+.a-top{
+  color:#ffd4e0;
+  background-color: var(--bg-theme-sec2); 
+  border-radius: 20% 20% 0 0;
+  box-shadow: -0.05em -0.05em 0.1em rgba(0, 0, 0, 0.8);
+  font-size: 1em;
+  font-weight: bolder;
+  padding: 0.3em 0.5em;
+  position: relative;
+  text-align: center;
+  top: -0.5em;
+  
+}
       
 .fa {
   border-radius: 1em;
@@ -516,7 +537,7 @@ ol.steps{
   color:var(--bg-theme-sec);   
 }
       
-@media screen and (min-width: 50em) {
+@media screen and (min-width: 55em) {
   html {  
     --flx-dir-parent:row;
     --flx-dir-child:column;
@@ -530,7 +551,7 @@ ol.steps{
 
   .container {
     box-shadow: 0 0.3em 0.7em grey;
-    max-width: 80%;
+    max-width: 100%;
     margin: 0 auto;
   }
 
@@ -555,9 +576,30 @@ ol.steps{
   .main-content {
     flex-grow: 1;
   }
+
+  .ul-status-m-parent {
+    gap: 1em;
+  }
 }
     
-@media screen and (min-width: 55em) {
+@media screen and (min-width: 60em) {
+  .container {
+    max-width: 85%;
+  }
+}
+
+@media screen and (min-width: 70em) {
+  .container {
+    max-width: 75%;
+  }
+}
+@media screen and (min-width: 75em) {
+  .container {
+    max-width: 70%;
+  }
+}
+
+@media screen and (min-width: 80em) {
   .container {
     max-width: 60%;
   }
