--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,15 @@ justify-content: flex-end;
     gap: 1em;
   }
 }
-    
+   
+
+@media screen and (min-width:30em) {
+ .chbox:checked + .toggle-layout .switch {
+    box-shadow: 0 0 0.3em #fe749c;
+    grid-row-start: 1;
+    grid-column-start: 2;
+   }
+}
 @media screen and (min-width: 60em) {
   .container {
     max-width: 85%;
